--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -244,8 +244,8 @@
 
                 <button id="next_page_button" class="btn btn-default btn-sm active" type="button">Next</button>
 
-
-                <form class="navbar-form navbar-right" style="margin-right: 5px">
+<br>
+                <form role="form" class="form-inline">
                     <div class="form-group">
                         <input type="number" min="1" max="{{ objects.paginator.num_pages }}"
                                class="form-control input-sm" id="page_input" placeholder="Go to page"
