--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -298,7 +298,7 @@
 
 
     <div id="filters_div"
-         style="position:fixed; display:none;background-color: rgba(200,200,200,1); border:1px solid rgba(100,100,100,1); border-radius: 5px; margin:5px;padding:5px;">
+         style="position:fixed; display:none;background-color: rgba(200,200,200,1); border:1px solid rgba(100,100,100,1); border-radius: 5px; margin-left:5px; margin-right:5px; width:90%; padding:5px;">
         <form role="form" class="form-inline">
             <div class="form-group">
                 <label for="year_select">Year:</label>
@@ -377,7 +377,8 @@
             </div>
 
         </form>
-        <button id="filters_submit_button" class="btn btn-success">Submit</button>
+        <br>
+        <button style="margin: 0 auto;" id="filters_submit_button" class="btn btn-danger">Submit</button>
 
     </div>
 
@@ -463,25 +464,15 @@
             $("#save_button").click(function () {
                 $("#gear").html('<span style="color:#ff9900">Tigatrapp Expert Validation <i class="fa fa-refresh fa-spin"></i></span>');
                 toggle_grab_repors_button();
-            }).position({
+            });
+
+
+            var show_filters_button = $("#show_filters_button");
+
+            var filters_div = $("#filters_div").position({
                 my: "middle top",
                 at: "middle bottom",
                 of: "#navbar",
-                collision: "fit"
-            });
-
-
-            var show_filters_button = $("#show_filters_button").position({
-                my: "left top",
-                at: "left bottom",
-                of: "#navbar",
-                collision: "fit"
-            });
-
-            var filters_div = $("#filters_div").position({
-                my: "left top",
-                at: "left bottom",
-                of: "#show_filters_button",
                 collision: "fit"
             });
 
