almost fixed expert page

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -93,7 +93,7 @@
                             <span class="icon-bar"></span>
                         </button>
                         <div class="navbar-brand"><span
-                                style="color:#ff9900">Tigatrapp Expert Validation</span> <span id="gear" style="color:#ff9900"><i class="fa fa-refresh fa-spin"></i></span></div>
+                                style="color:#ff9900">Tigatrapp Expert Validation <i id="gear" class="fa fa-refresh fa-spin"></i></span></div>
                     </div>
                     <div class="navbar-collapse collapse">
 
