--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -447,7 +447,7 @@
 
         var grab_reports_button = $("#grab_reports_button");
         var n_pending = {{ n_pending }};
-        function toggle_grab_repors_button() {
+        function toggle_grab_reports_button() {
             if (n_pending < 20) {
                 grab_reports_button.css("visibility", "visible");
             } else {
@@ -466,7 +466,8 @@
 
             $("#save_button").click(function () {
                 gear.css("visibility", "visible");
-                toggle_grab_repors_button();
+                toggle_grab_reports_button();
+                $("#formset_forms").submit();
             });
 
 
@@ -488,7 +489,7 @@
                 }
             });
 
-            toggle_grab_repors_button();
+            toggle_grab_reports_button();
         });
 
         var scroll_position_input = $("#scroll_position");
