ERA flag field; schemamigratiaon; selectpicker in form

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -463,6 +463,8 @@
 
             $("#formset_forms form").addClass("form-horizontal").attr("role", "form");
 
+            $("select").selectpicker();
+
             $("#save_button").click(function () {
                 gear.show();
                 toggle_grab_reports_button();
